--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=demo
 spring.mvc.servlet.path=/api/v3
 spring.main.allow-bean-definition-overriding=true
+spring.jpa.open-in-view=false
 
 # MySQL connection
 spring.datasource.url=jdbc:mysql://localhost:3306/banksystem?useSSL=false&serverTimezone=UTC
